Fix spacing in Toggle.scss

--- a/frontend/src/component/ui/Toggle.scss
+++ b/frontend/src/component/ui/Toggle.scss
@@ -1,35 +1,34 @@
-@import "../styles/corner";
-@import "../styles/color";
-@import "../styles/font";
+@import '../styles/corner';
+@import '../styles/color';
+@import '../styles/font';
 
 .toggle-component {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 50%;
+  .toggle-back {
+    @include round-corner;
 
-    .toggle-back {
-        @include round-corner;
+    display: inline-block;
+    background-color: lightgray;
+    width: 70px;
+    height: 30px;
+    cursor: pointer;
+  }
 
-        display: inline-block;
-        background-color: lightgray;
-        width: 70px;
-        height: 30px;
-        cursor: pointer;
-    }
+  .toggle {
+    @include round-corner;
 
-    .toggle {
-        @include round-corner;
+    background-color: gray;
+    width: 30px;
+    height: 30px;
+    transition: background-color 0.2s, margin-left 0.5s;
+  }
 
-        background-color: gray;
-        width: 30px;
-        height: 30px;
-        transition: background-color 0.2s, margin-left 0.5s;
-    }
-
-    .toggle.active {
-        background-color: $color-primary;
-        margin-left: 40px;
-    }
+  .toggle.active {
+    background-color: $color-primary;
+    margin-left: 40px;
+  }
 }
